changes in name of ap, add some classes in booking complaint section

--- a/api/templates/aboutus.html
+++ b/api/templates/aboutus.html
@@ -98,7 +98,7 @@
                 </div> -->
                 <div class="col-md-12 mt-3">
                     <h3>Pulkit Jain</h3>
-                    <h6 class="text-danger mt-4">founder & CEO AIRPOST XPRESS</h6>
+                    <h6 class="text-danger mt-4">Founder & CEO (AirpostXpress)</h6>
                     <p class="mt-2">As a lifelong entrepreneur, I've always been passionate about finding innovative solutions to complex problems. My goal is to revolutionize the courier industry by providing fast, reliable, and affordable shipping services.
                     </p>
                 </div>
@@ -110,12 +110,11 @@
                     <img src="{% static '\img\founder2.jpg' %}" alt="" class="img-fluid rounded-5">
                 </div> -->
                 <div class="col-md-12 mt-3">
-                    <h3>N. Kumar</h3>
+                    <h3>Piyush kumar</h3>
                     <h6 class="text-danger mt-4">Tech. Strategic Advisor</h6>
                     <p class="mt-2">I've always been driven by a desire to help others, We're doing just that. By providing reliable and affordable shipping services, we're helping businesses and individuals connect with one another and make the world a smaller and more
                         connected place with the help of technology.</p>
                 </div>
-
             </div>
         </div>
     </div>
