--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Airpostxpress {% block title %}{% endblock title %}</title>
+    <title>AirpostXpress {% block title %}{% endblock title %}</title>
     <meta name="description" content="airpostxpress, Best courier company in india, Airpostxpress courier and cargo solutions: Explore our comprehensive resources, services, and insights for the courier and cargo industries. Discover efficient shipping, logistics, and tracking solutions to streamline your operations and deliver excellence.">
 
     <meta name="keywords" content="airpost, xpress, airpostxpress, airpost xpress, best courier, courier, courier service in rajasthan, best courier service in india, best courier service, cargo service, chandrayan3, moon, mission, tracking, Freight Forwarding, Logistics Solutions, Express Delivery,International Shipping, Parcel Tracking, Supply Chain Management, Air Freight, Ocean Freight, Last-Mile Delivery, Warehousing Solutions, Customs Clearance, E-commerce Shipping, Cross-Border Shipping, Shipping Rates, Same-Day Delivery, fedex, ups, trackon, tirupati, air, post, airpostexpress, express, maruti, madhur, nandan, Courier Services, Cargo Shipping">
