--- a/api/templates/drs.html
+++ b/api/templates/drs.html
@@ -40,7 +40,7 @@
         <div class="col-md-12 mb-5">
             <div class="card">
                 <div class="card-header">
-                    Pending DRS
+                    Delivery Run Sheet - <span id="rowCount" style="color: red;" class="text-center"></span>
                 </div>
                 <div class="card-body">
                     <div class="col-12">
