--- a/api/templates/services.html
+++ b/api/templates/services.html
@@ -21,6 +21,7 @@
                 across town or international shipping across the globe, we've got you covered.<br> At Airpost Xpress, we are committed to providing the highest quality service at an affordable price.<br>Contact us today to experience the Airpost Xpress
                 difference
             </p>
+            <a href="{% url 'shipment_book' %}" class="btn btn-success">Book your shipment</a>
         </div>
 
     </div>
