Spell correction in user booking

--- a/api/templates/user_book.html
+++ b/api/templates/user_book.html
@@ -158,7 +158,7 @@
                                                         <input type="text" name="height" id="height" class="form-control mt-2">
                                                     </div>
                                                     <div class="col-md-4">
-                                                        <label class="mt-2" for="item_desc"><b>Item Disc.</b></label>
+                                                        <label class="mt-2" for="item_desc"><b>Item Description</b></label>
                                                     </div>
                                                     <div class="col-md-8">
                                                         <input type="text" name="item_desc" id="item_desc" class="form-control mt-2" required>
