--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -250,7 +250,7 @@
                 </table>
             </div>
             <div class="text-start mt-1">
-                <p>Total <b>{{ total_bookings }}</b> shipment booked today.</p>
+                <!-- <p>Total <b>{{ total_bookings }}</b> shipment booked today.</p> -->
             </div>
             <div>
                 <form action="{% url 'bulk_print_receipt' %}" method="POST" id="receipt_bulk_form" target="_blank">
