--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -7,7 +7,7 @@
                 {% csrf_token %}
                 <div class="form-group mx-sm-3 mb-2 mt-4">
                     <h3><label for="pincode" class="area_name">Pincode</label></h3>
-                    <input type="number" class="form-control form-control-sm" name="pincode" id="pincode" placeholder="Search By Pincode" required>
+                    <input type="number" class="form-control" name="pincode" id="pincode" placeholder="Search By Pincode" required>
                 </div>
                 <button type="submit" name="by_pincode" class="btn btn-primary btn-sm mb-3">Search</button>
             </form>
@@ -17,7 +17,7 @@
                 {% csrf_token %}
                 <div class="form-group mx-sm-3 mb-2 mt-4">
                     <h3><label for="area_name" class="area_name">Area Name</label></h3>
-                    <input type="text" class="form-control form-control-sm" name="area_name" id="area_name" placeholder="Search By State / Zone /Area" required>
+                    <input type="text" class="form-control" name="area_name" id="area_name" placeholder="Search By State / Zone /Area" required>
                 </div>
                 <button type="submit" name="by_area" class="btn btn-primary btn-sm mb-3">Search</button>
             </form>
