--- a/api/templates/tracking.html
+++ b/api/templates/tracking.html
@@ -28,7 +28,7 @@
         <div class="col-12 mt-4">
             <h4 class="text-center"></h4>
             <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped table-bordered">
                     <!-- <thead>
                         <tr>
                             <th scope="col" class="text-center" colspan="2">Booking Detail</th>
@@ -97,7 +97,7 @@
                         <tr>
                             <th scope="row" class="text-success">Current Status</th>
                             {% if user.is_authenticated %}
-                            <td class="text-success"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            <td class="text-success"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
                             {% else %}
                             <td class="text-success"><b>{{ last_status }}</b></td>
                             {% endif %}
@@ -106,7 +106,7 @@
                         <tr>
                             <th scope="row" class="text-success">Current Status</th>
                             {% if user.is_authenticated %}
-                            <td class="text-danger"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            <td class="text-danger"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
                             {% else %}
                             <td class="text-danger"><b>{{ last_status }}</b></td>
                             {% endif %}
@@ -115,7 +115,7 @@
                         <tr>
                             <th scope="row" class="text-success">Current Status</th>
                             {% if user.is_authenticated %}
-                            <td class="text-danger"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            <td class="text-danger"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
                             {% else %}
                             <td class="text-danger"><b>{{ last_status }}</b></td>
                             {% endif %}
@@ -124,7 +124,7 @@
                         <tr>
                             <th scope="row" class="text-success">Current Status</th>
                             {% if user.is_authenticated %}
-                            <td class="text-danger"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            <td class="text-danger"><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
                             {% else %}
                             <td class="text-danger"><b>{{ last_status }}</b></td>
                             {% endif %}
@@ -133,7 +133,7 @@
                         <tr>
                             <th scope="row">Current Status</th>
                             {% if user.is_authenticated %} {% if dbd.delivery_boy_name %}
-                            <td><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            <td><b>{{ last_status }} By {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td>
                             {% else %}
                             <td><b>{{ last_status }}</b></td>
                             {% endif %} {% else %}
@@ -160,42 +160,26 @@
         {% if booking_details.ref_courier_name.type == 'Internal' %}
         <div class="col-12">
             <div class="scrollme">
-                <table class="table table-striped table-responsive">
+                <table class="table table-striped table-responsive table-bordered">
                     <tbody>
                         <tr>
                             <th class="tracking_head" colspan="5">Tracking history</th>
                         </tr>
                         <tr>
                             <th>Date</th>
-                            <th>From</th>
-                            <th>To</th>
+                            <!-- <th>From</th>
+                            <th>To</th> -->
                             <th>Status</th>
                             <th>Remarks/Receiver</th>
                         </tr>
-
-                        {% for track_his in tracking_history %}
-                        <tr>
-                            <td>{{ track_his.in_out_datetime|date:"Y-m-d" }}</td>
-                            {% if track_his.status.name == 'IN' %}
-                            <td></td>
-                            {% else %}
-                            <td>{{ track_his.d_from }}</td>
-                            {% endif %}
-                            <td>{{ track_his.d_to }}</td>
-                            <td>{{ track_his.status }}</td>
-                            {% if track_his.remarks %}
-                            <td>{{ track_his.remarks }}</td>
-                            {% else %}
-                            <td></td>
-                            {% endif %}
-                        </tr>
-                        {% endfor %} {% if drs_details == 1 %}
+                        {% if drs_details == 1 %}
                         <tr>
                             <td>{{ date|date:"Y-m-d" }}</td>
-                            <td>{{ track_his.d_from }}</td>
-                            <td>{{ track_his.d_to }}</td>
+                            <!-- <td>{{ track_his.d_from </td> -->
+                            <!-- <td>{{ track_his.d_to </td> -->
                             {% if user.is_authenticated %}
-                            <td><b>{{ status }} | Delivery boy: {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }}</b></td>
+                            <!-- <td><b>{{ status }} | Delivery boy: {{ dbd.delivery_boy_name }}, Contact: {{ dbd.mobile_number }} | DRS No: {{ drs_num }}</b></td> -->
+                            <td><b>{{ status }}</b></td>
                             {% else %}
                             <td><b>{{ status }}</b></td>
                             {% endif %} {% if reason %}
@@ -204,7 +188,25 @@
                             <td>{{ reason }}</td>
                             {% endif %}
                         </tr>
-                        {% endif %}
+                        {% endif %} {% for track_his in tracking_history %}
+                        <tr>
+                            <td>{{ track_his.in_out_datetime|date:"Y-m-d" }}</td>
+                            {% if track_his.status.name == 'IN' %}
+                            <td>Arrived at: <b>{{ track_his.d_to }}</b></td>
+                            <!-- <td></td> -->
+                            {% else %}
+                            <td><b>OUT</b> - From: <b>{{ track_his.d_from }}</b> To: <b>{{ track_his.d_to }}</b></td>
+                            <!-- <td></td> -->
+                            {% endif %}
+                            <!-- <td> track_his.status </td> -->
+                            <!-- <td></td> -->
+                            {% if track_his.remarks %}
+                            <td>{{ track_his.remarks }}</td>
+                            {% else %}
+                            <td></td>
+                            {% endif %}
+                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
